--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,20 +173,11 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.benefits h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 .footer {
     padding: 30px;
