--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    color: white
 }
 
 body {
@@ -12,7 +13,6 @@ body {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
 }
 
 .header h1 {
@@ -20,16 +20,17 @@ body {
     font-size: 48px;
 }
 
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    list-style-type: none;
 }
 
 .header div ul li {
@@ -40,10 +41,6 @@ body {
 a {
     color: #ffffff;
     text-decoration: none;
-}
-
-p {
-    font-size: 16px;
 }
 
 .hero {
@@ -71,7 +68,7 @@ p {
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -82,13 +79,13 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, benefit-brand, benefit-cost {
+.benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
 
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
