--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,26 +24,20 @@ body {
     color: #d9dcd6;
 }
 
-.header nav {
+.headernav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    list-style-type: none;
 }
 
-.header div ul li {
+.headernav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.hero {
+.heroimg {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -68,7 +62,7 @@ a {
     margin-left: 20px;
 }
 
-aside {
+.benefits{
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -79,13 +73,13 @@ aside {
     background-color: #2589bd;
 }
 
-.benefits {
+.example {
     margin-bottom: 32px;
     color: #ffffff;
+    text-align: center;
 }
 
-
-.benefits img {
+.example img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
