--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,17 +2,22 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    color: white
 }
 
 body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
+    color: white
 }
 
 .header h1 {
@@ -37,7 +42,7 @@ body {
     margin-left: 25px;
 }
 
-.heroimg {
+#heroimg {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -56,21 +61,10 @@ body {
     margin-left: 25px;
 }
 
-.content {
+.main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-}
-
-.benefits{
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
 }
 
 .example {
@@ -85,7 +79,7 @@ body {
     max-width: 150px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -94,8 +88,18 @@ body {
     color: #ffffff;
 }
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+.content img {
     max-height: 200px;
+}
+.benefits{
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
 }
 
 .footer {
@@ -103,8 +107,10 @@ body {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    color: black;
 }
 
 .footer h2 {
     font-size: 20px;
+    color: black;
 }
