--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,8 @@ a {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    display: inline;
+    margin-left: 25px;
 }
 
 .headernav ul li {
